--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_API_URL=http://127.0.0.1:8000/
-#REACT_APP_API_URL=https://stagings.tk/knight
+#REACT_APP_API_URL=https://stagings.tk:4000/knight
