--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,15 +61,17 @@
         "jss-rtl": "^0.3.0",
         "lodash": "4.17.15",
         "material-ui-popup-state": "1.4.1",
+        "moment": "^2.29.1",
         "node-sass": "^4.14.1",
         "object-path": "0.11.4",
         "perfect-scrollbar": "1.5.0",
         "prop-types": "15.7.2",
         "react": "16.12.0",
         "react-bootstrap": "1.0.1",
+        "react-bootstrap-date-picker": "^5.1.0",
         "react-bootstrap-table-next": "4.0.2",
         "react-bootstrap-table2-paginator": "2.1.2",
-        "react-datepicker": "2.16.0",
+        "react-datepicker": "^2.16.0",
         "react-dom": "16.12.0",
         "react-draggable": "4.4.2",
         "react-inlinesvg": "1.2.0",
