--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Django==3.1.3 
-asgiref==3.3.1 
-pytz==2020.4 
-sqlparse==0.4.1
+asgiref==3.3.1
+Django==3.1.3
+django-cors-headers==3.5.0
+django-environ==0.4.5
+django-filter==2.4.0
 djangorestframework==3.12.2
 mysqlclient==1.4.6
-django-cors-headers==3.5.0
-django-filter==2.4.0
+pytz==2020.4
+sqlparse==0.4.1
