--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ django-cors-headers==3.5.0
 django-environ==0.4.5
 django-filter==2.4.0
 djangorestframework==3.12.2
-#mysqlclient==1.4.6
+mysqlclient==1.4.6
 pytz==2020.4
 sqlparse==0.4.1
